# Folderly-Prototype

./: .dockerignore  .gitignore  Dockerfile  README.md  ai_integration.py  backup.py  cli.py  config.py  core.py  docker-compose.yml  folderly_activities.json  function_schemas.py  move_manager.py  pyproject.toml  requirements.txt  streamlit_app.py  test_async_core.py  test_delete_undo.py  test_smart_execution.py  test_watchdog.py  ts  undo_expiry.py  undo_manager.py  utils.py
docs/: ASYNC_ARCHITECTURE.md  DEVELOPMENT.md  DOCKER_USAGE.md  INSTALLATION.md  README.md  SECURITY_SETUP.md  USAGE.md
folderly/: __init__.py  activity_tracker.py  ai_activity_integration.py  core.py  search.py
folderly_temp_test/: testfile.txt
folderly_tests/: temp_undo_demo.py  test.py
src/: __init__.py
src/ai/: __init__.py  ai_integration.py  function_schemas.py  prompt_templates.txt  prompts.py
src/cli/: __init__.py  cli.py
src/core/: __init__.py  core.py  search.py
src/utils/: __init__.py  backup.py  move_manager.py  undo_expiry.py  undo_manager.py
tests/: __init__.py  test_delete_undo.py
