[project]
name = "folderly"
version = "1.0.3"
description = "Smart Desktop File Management with AI Integration"
authors = [
    {name = "Folderly Team", email = "aayush@aayussh.com"}
]
readme = "README.md"
requires-python = ">=3.8.1"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities"
]
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "send2trash>=1.8.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0"
]

[project.scripts]
folderly = "src.cli.cli:main_sync"
folderly-ai = "src.ai.ai_integration:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"] 